@@ -1,3 +1,7 @@
+2005-03-14  Mark McLoughlin  <markmc@redhat.com>
+
+	* lib/userdb.py: add stub for DV to hack on.
+
 Sun Mar 13 08:11:04 CET 2005 Daniel Veillard <veillard@redhat.com>
 
 	* po/POTFILES.in: added admin-tool/fileviewer.py
